<resources>
    <string name="app_name">U_Dirty_Rat</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_registration">Sign up</string>
    <string name="welcome">Welcome to "U Dirty Rat"!</string>
    <string name="submit">Submit</string>



    <!-- String related to graph -->
    <string name="Type_Year">Type Year</string>
    <string name="YYYY">yyyy</string>
    <string name="Update">Update</string>
    <string name="Back">back</string>

    <!-- Strings related to register -->
    <string name="registerInstruction">
        "Register a new account"</string>
    <string name="admin">Administrator</string>
    <string name="register">Register</string>




    <!-- String related to main page -->
    <string name="logOut">Log Out</string>
    <string name="recentRepo">Recent Reports</string>
    <string name="search">Search</string>
    <string name="map">MAP</string>
    <string name="report">REPORT</string>
    <string name="graph">Graph</string>

    <!-- String related to view page -->
    <string name="content">Content</string>
    <string name="date">Date</string>
    <string name="uniqueKey">Unique Key</string>
    <string name="locationType">Location Type</string>
    <string name="incidentZip">Incident Zip</string>
    <string name="incidentAddress">Incident Address</string>
    <string name="city">City</string>
    <string name="borough">Borough</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

    <!-- String related to view page -->
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="error_invalid_password">Please enter a password</string>
    <string name="error_field_required">This field is required</string>
    <string name="auth_failed">"Authentication failed"</string>
    <string name="title_activity_main_page">MainPage</string>
</resources>
