<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jay.u_dirty_rat.GraphPage"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="400dp" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/yearText"
            android:layout_alignBottom="@+id/yearText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/Type_Year" />

        <EditText
            android:id="@+id/yearText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/updateButton"
            android:layout_alignBottom="@+id/updateButton"
            android:layout_toEndOf="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:ems="10"
            android:hint="@string/YYYY"
            android:inputType="number" />


        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/graph"
            android:text="@string/Update" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/updateButton"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/updateButton"
            android:text="@string/Back" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
